--- a/files/css/pages/profile.module.scss
+++ b/files/css/pages/profile.module.scss
@@ -64,6 +64,8 @@
 
     background-color: $bg2;
     border-radius: 20px;
+    
+    margin-bottom: 20px;
 
     div {
       width: 100%;
@@ -137,6 +139,41 @@
           color: $bg1;
           background-image: linear-gradient(120deg, $acc1, $acc2);
         }
+      }
+    }
+  }
+  .logout {
+    width: 100%;
+    padding: 20px;
+    box-sizing: border-box;
+
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+
+    background-color: $bg2;
+    border-radius: 20px;
+
+    button {
+      font-family: inherit;
+      font-size: 15px;
+      
+      width: 400px;
+      height: 26px;
+
+      margin: 0;
+      padding: 0 5px;
+      box-sizing: content-box;
+
+      border-radius: 10px;
+      border: 3px solid $bg3;
+      background-color: $bg1;
+
+      &:hover {
+        cursor: pointer;
+        color: $bg1;
+        background-image: linear-gradient(120deg, $acc1, $acc2);
       }
     }
   }
