--- a/files/css/pages/profile.module.scss
+++ b/files/css/pages/profile.module.scss
@@ -64,7 +64,7 @@
 
     background-color: $bg2;
     border-radius: 20px;
-    
+
     margin-bottom: 20px;
 
     div {
@@ -102,12 +102,20 @@
           width: 100%;
           height: 100%;
         }
-        .normal {display: block}
-        .hover {display: none}
+        .normal {
+          display: block
+        }
+        .hover {
+          display: none
+        }
         &:hover {
           cursor: pointer;
-          .normal {display: none}
-          .hover {display: block}
+          .normal {
+            display: none
+          }
+          .hover {
+            display: block
+          }
         }
       }
     }
@@ -158,7 +166,7 @@
     button {
       font-family: inherit;
       font-size: 15px;
-      
+
       width: 400px;
       height: 26px;
 
@@ -175,6 +183,89 @@
         color: $bg1;
         background-image: linear-gradient(120deg, $acc1, $acc2);
       }
+    }
+  }
+}
+
+.additional_options {
+  .tags {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 20px;
+
+    background-color: $bg2;
+    border-radius: 20px;
+
+    width: 500px;
+    margin-bottom: 20px;
+    .tag {
+      display: flex;
+      align-items: center;
+      padding: 2px 8px;
+      background-color: $bg3;
+      border-radius: 100vw;
+      margin-bottom: 7px;
+      margin-right: 7px;
+      p {
+        margin-top: -1px;
+        margin-bottom: 2px;
+        margin-left: 5px;
+        font-size: 15px;
+      }
+      &.active {
+        background-image: linear-gradient(120deg, $acc1, $acc2);
+        p {
+          color: $bg1;
+        }
+      }
+      &:hover {
+        cursor: pointer;
+      }
+    }
+  }
+  .volunteer {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    padding: 20px;
+
+    background-color: $bg2;
+    border-radius: 20px;
+
+    width: 500px;
+    margin-bottom: 20px;
+
+    textarea, button {
+      width: 400px;
+      font-size: 15px;
+      padding: 5px;
+      border-radius: 10px;
+      border: 3px solid $bg3;
+      background-color: $bg1;
+      margin-bottom: 3px;
+      resize: none;
+    }
+    button {
+      font-family: inherit;
+      height: 26px;
+      margin: 0;
+      padding: 0 5px;
+      box-sizing: content-box;
+
+      &:hover {
+        cursor: pointer;
+        color: $bg1;
+        background-image: linear-gradient(120deg, $acc1, $acc2);
+      }
+    }
+    .devino_voluntar:hover {
+      cursor: pointer;
+      color: $acc2;
+      background: linear-gradient(120deg, $acc2, $acc1);
+      background-clip: text;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
     }
   }
 }
