--- a/files/css/pages/events.module.scss
+++ b/files/css/pages/events.module.scss
@@ -11,12 +11,15 @@
   align-items: flex-start;
   justify-content: space-between;
   width: 75%;
+  margin-left: 25%;
 }
 
 .tags {
+  position: fixed;
+  
   display: flex;
   flex-direction: column;
-  padding: 20px;
+  padding: 30px 20px;
   width: 200px;
 
   .tag {
@@ -104,19 +107,22 @@
   }
 }
 .cards {
+  position: fixed;
+  right: 0;
   display: flex;
   flex-direction: column;
-  padding: 20px;
+  padding: 25px 20px;
   width: 300px;
   height: calc(100vh - $menu_height);
 
   >div {
-    width: 300px;
-    height: 300px;
+    width: 280px;
+    height: 280px;
     &:first-child {
       margin-bottom: 20px;
     }
     border-radius: 20px;
+    box-shadow: 0 0 30px -10px $txt1;
   }
   .banner {
     position: relative;
@@ -158,7 +164,11 @@
       }
       -webkit-mask-image: linear-gradient(-45deg, black 50%, transparent 50%);
       mask-image: linear-gradient(-45deg, black 50%, transparent 50%);
-      box-shadow: 0 0 30px -10px $txt1;
     }
+  }
+  .today {
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0 0 30px -10px $txt1;
   }
 }
